# gcm-filters

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  .travis.yml  .zenodo.json  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.txt  MANIFEST.in  README.md  codecov.yml  coverage.toml  github_deploy_key.enc  paper.bib  paper.md  pyproject.toml  readthedocs.yml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tutorial_GPU.ipynb
.github/ISSUE_TEMPLATE/: bug_report.md  docs.md  usage-general-question.md
.github/workflows/: pre-commit.yml  publish-to-pypi.yml  tests.yaml
Paper/: paper.bib  paper.md
ci/: environment.yml  environment_docs.yml
docs/: Makefile  POP_tripolar_grid_Laplacian.ipynb  api.rst  basic_filtering.rst  catalog.yaml  conf.py  dask.rst  environment.yml  factored_gaussian.rst  gpu.ipynb  gpu.rst  grid_types.rst  how_to_cite.rst  how_to_contribute.rst  index.rst  installation.rst  new_section.rst  new_section_notebook.ipynb  theory.ipynb  theory.rst  tutorial.ipynb  tutorial_GPU.ipynb  tutorial_filter_types.ipynb  tutorial_irregular_grid.ipynb  tutorial_numerical_instability.ipynb  tutorial_tripole_grid.ipynb  tutorial_vector_laplacian.ipynb
docs/examples/: example_filter_types.ipynb  example_numerical_instability.ipynb  example_satellite_observations .ipynb  example_satellite_observations.ipynb  example_tripole_grid.ipynb  example_vector_laplacian.ipynb
docs/source/: conf.py  how2package4ioos.md  index.rst  ioos_pkg_skeleton.rst
gcm_filters/: __init__.py  filter.py  filter_spec.py  gcm_filters.py  gpu_compat.py  kernels.py  testing_MOM5_Laplacian.ipynb
ioos_pkg_skeleton/: __init__.py
mom5_example/: compare_filters.ipynb  draft.py  gaussian_filter.py  read_data.py  vorticity.py
notebooks/: IOOS-Python-Package-Skeleton.ipynb  testing_MOM5_Laplacian.ipynb  tutorial.ipynb
tests/: conftest.py  test_filter.py  test_filter_validation.py  test_gcm_filters.py  test_ioos_pkg_skeleton.py  test_kernels.py  test_kernels_validation.py
tests/test_data/REGULAR_WITH_LAND_AREA_WEIGHTED.zarr/: 0.0
tests/test_data/TRIPOLAR_REGULAR_WITH_LAND_AREA_WEIGHTED.zarr/: 0.0
tests/test_data_filter/IRREGULAR_WITH_LAND.zarr/: 0.0
tests/test_data_filter/REGULAR.zarr/: 0.0
tests/test_data_filter/REGULAR_AREA_WEIGHTED.zarr/: .zarray  0.0
tests/test_data_filter/REGULAR_WITH_LAND.zarr/: 0.0
tests/test_data_filter/REGULAR_WITH_LAND_AREA_WEIGHTED.zarr/: 0.0
tests/test_data_filter/TRIPOLAR_POP_WITH_LAND.zarr/: 0.0
tests/test_data_filter/TRIPOLAR_REGULAR_WITH_LAND_AREA_WEIGHTED.zarr/: 0.0
tests/test_data_filter/VECTOR_B_GRID.zarr/: .zarray  0.0.0
tests/test_data_filter/VECTOR_C_GRID.zarr/: 0.0.0
tests/test_data_kernels/IRREGULAR_WITH_LAND.zarr/: 0.0
tests/test_data_kernels/REGULAR.zarr/: 0.0
tests/test_data_kernels/TRIPOLAR_POP_WITH_LAND.zarr/: 0.0
tests/test_data_kernels/VECTOR_B_GRID.zarr/: 0.0.0
tests/test_data_kernels/VECTOR_C_GRID.zarr/: 0.0.0
