[metadata]
name = gcm_filters
description = Diffusion-based Spatial Filtering of Gridded Data
author = Ocean Eddy CPT Team
author_email = nora.loose@gmail.com
url = https://github.com/ocean-eddy-cpt/gcm-filters
long_description = file: README.md
long_description_content_type = text/markdown
license = LGPL-3.0
license_file = LICENSE.txt
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering

[options]
zip_safe = False
install_requires =
    numpy
    dask
    scipy
    xarray
python_requires = >=3.6
packages = find:

[sdist]
formats = gztar

[check-manifest]
ignore =
    *.yml
    *.yaml
    .coveragerc
    docs
    docs/*
    *.enc
    notebooks
    notebooks/*
    tests
    tests/*

[flake8]
max-line-length = 105
select = C,E,F,W,B,B950
ignore = E203, E501, W503
exclude = gcm_filters/_version.py

[options.extras_require]
examples =
    matplotlib
    cupy
    intake
    intake-xarray
    s3fs
    cartopy
    pooch >= 1.5.0
